--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,16 @@
   <link rel="stylesheet" href="assets/css/vendor/fontawesome.css">
   <link rel="stylesheet" href="assets/css/style.css">
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9K1ECTHBR4"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-9K1ECTHBR4');
+  </script>
+
 
   <!-- js
   ======================================-->
